# orthobraceforge

./: .gitignore  CLAUDE.md  CONFIGURATION.md  Makefile  README.md  TODO.md  agents.py  compliance_rag.py  config.py  database.py  exceptions.py  export.py  gui.py  main.py  orchestration.py  orthobraceforge.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py  agentic3d.py  agentic_alloy.py  base.py  cad_render.py  chat_to_stl.py  forma_ai.py  octo_mcp.py  ortho_insoles.py  print_defect.py  talkcad.py  vlm_critique.py
assets/rag_data/: biocompat_pediatric.json  equinus_clinical.json  fda_510k_afo.json  iso13485_checklist.json  material_specs.json
docs/: architecture.mermaid  build_guide.md  project_structure.md  risk_matrix.md  workflow_example.md
gui/: __init__.py  design_panel.py  main_window.py  patient_panel.py  print_panel.py  theme.py  worker.py
tests/: conftest.py  test_agents.py  test_compliance_rag.py  test_config.py  test_database.py  test_exceptions.py  test_export.py  test_orchestration.py
