[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orthobraceforge"
version = "1.0.0"
description = "Pediatric AFO Design & Manufacturing Suite"
requires-python = ">=3.11"
license = {text = "Proprietary — Investigational Use Only"}
readme = "docs/build_guide.md"

dependencies = [
    "PyQt6>=6.6.0",
    "pyvista>=0.43.0",
    "trimesh>=4.0.0",
    "numpy>=1.26.0",
    "reportlab>=4.1.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-qt>=4.3",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
# Vendored packages and optional GUI deps have no stubs
[[tool.mypy.overrides]]
module = [
    "pyvista.*",
    "pyvistaqt.*",
    "trimesh.*",
    "reportlab.*",
    "sentence_transformers.*",
    "keyring.*",
    "PyQt6.*",
]
ignore_missing_imports = true

[project.scripts]
orthobraceforge = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long — handled by formatter if needed
    "F841",  # local variable assigned but never used — common in build123d templates
    "F821",  # undefined name — false positives in f-string code templates
]

[tool.ruff.lint.isort]
known-first-party = ["agents", "config", "database", "exceptions", "export", "orchestration", "compliance_rag", "gui"]
